bpo-23691: Protect the re.finditer() iterator from re-entering (GH-32012)